
/**
 ******************  Script Configuration ******************
 */
buildscript {
    repositories {
        jcenter()
        gradlePluginPortal()

        maven {
            url "https://sandec.bintray.com/repo"
        }
    }

    dependencies {
        classpath 'com.sandec.jpro:jpro-plugin-gradle:2020.1.0-RC1'
        classpath 'org.openjfx:javafx-plugin:0.0.9'
    }
}


/**
 ******************  Java Configuration ******************
 */
apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'org.openjfx.javafxplugin'

compileJava {
    sourceCompatibility = 11
    targetCompatibility = 11
}

repositories {
    jcenter()
}

javafx {
    version = '15'
    modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web' ]
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['src']
        }
    }
}


dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])

    compile 'com.jfoenix:jfoenix:9.0.10'

    compile 'de.jensd:fontawesomefx-controls:9.1.2'
    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
    compile 'de.jensd:fontawesomefx-materialdesignfont:1.7.22-4'
    compile 'de.jensd:fontawesomefx-materialicons:2.2.0-5'
}


/**
 ******************  jpro Configuration ******************
 */
apply plugin: 'com.sandec.jpro'

run {
    jvmArgs = ["--add-opens",
               "javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
               "--add-opens",
               "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
               "--add-opens",
               "javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
               "--add-opens",
               "javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
               "--add-opens",
               "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
               "--add-opens",
               "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
               "--add-opens",
               "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"]
}

/**
 * App Main Class
 */
mainClassName = 'library.assistant.ui.main.Main'
//mainClassName = 'com.jpro.hellojpro.HelloJProFXML'

/**
 * jpro settings
 */
jpro {
    // for debugging
    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'

    JVMArgs << '-Xmx1000m'

    //jpro server port
    port = 8080

}